# cmake-examples

./: .gitignore  README.md
lib-toplevelonly/: main.cpp
simplelib/: CMakeLists.txt
simplelib-add_subdir/liba/: CMakeLists.txt
simplelib-add_subdir/libb/: CMakeLists.txt
simplelib-add_subdir/libc/: CMakeLists.txt
simplelib-external/liba/: CMakeLists.txt
simplelib-external/libb/: CMakeLists.txt  lib.cpp
simplelib-external/libc/: CMakeLists.txt
simplelib-include/liba/: lib.cpp  liba.cmake
simplelib-include/libc/: c.h  lib.cpp  libc.cmake
staticlibs-add_subdir/: CMakeLists.txt
staticlibs-include/: CMakeLists.txt
staticlibs-include/cmake/: liba.cmake  libb.cmake  libc.cmake
staticlibs-include/libb/: libb.cmake
staticlibs-monolithic/: CMakeLists.txt
staticlibs-monolithic/liba/: a.h
superbuild-configtargets/: CMakeLists.txt
superbuild-configtargets-direct/: CMakeLists.txt
superbuild-configtargets-direct/liba/: CMakeLists.txt
superbuild-configtargets-direct/libb/: CMakeLists.txt
superbuild-configtargets-direct/libc/: CMakeLists.txt
superbuild-configtargets-included/: CMakeLists.txt
superbuild-configtargets-included/libb/: b.h
superbuild-configtargets-standard/: CMakeLists.txt
superbuild-configtargets/app/: CMakeLists.txt
superbuild-configtargets/liba/: CMakeLists.txt
superbuild-configtargets/libb/: CMakeLists.txt  libbConfig.cmake.in
superbuild-configtargets/libc/: CMakeLists.txt
superbuild-importedtargets/: CMakeLists.txt
superbuild-importedtargets/app/: CMakeLists.txt  main.cpp
superbuild-importedtargets/liba/: CMakeLists.txt
superbuild-importedtargets/libb/: CMakeLists.txt
superbuild-portstree/ports/: CMakeLists.txt
superbuild-portstree/ports/app/: CMakeLists.txt
superbuild-portstree/ports/liba/: CMakeLists.txt
superbuild-portstree/ports/libb/: CMakeLists.txt
superbuild-portstree/ports/libc/: CMakeLists.txt
superbuild-portstree/src/liba/: CMakeLists.txt
superbuild-portstree/src/libb/: CMakeLists.txt
superbuild/app/: CMakeLists.txt
superbuild/liba/: libaConfig.cmake.in
superbuild/libb/: .libbConfig.cmake.in.swp  CMakeLists.txt
superbuild/libc/: libcConfig.cmake.in
